--- a/client/src/views/Event/components/contentTypes/Picture/Picture.css
+++ b/client/src/views/Event/components/contentTypes/Picture/Picture.css
@@ -45,5 +45,6 @@
 
 @media only screen and (max-width: 400px) {
     .picture-container {
+        height: 400px;
     }
 }
